# EasyPR-native

./: .gitignore  .gitmodules  README.md  pom.xml
EasyPR-change/: chars_identify.cpp  chars_identify.h  plate_judge.cpp
NativeEasyPR/: CMakeLists.txt  NativeEasyPR.sln  README.md  opencv310vc12.props
NativeEasyPR/easyprcore/: easyprcore.vcxproj  easyprcore.vcxproj.filters
NativeEasyPR/easyprjni/: easyprjni.vcxproj  easyprjni.vcxproj.filters  jnijava64.props
NativeEasyPR/easyprjni/include/: process.h  tojava.h
NativeEasyPR/easyprjni/src/: process.cpp  tojava.cpp
NativeEasyPR/easyprpy/: easyprpy.vcxproj  easyprpy.vcxproj.filters
NativeEasyPR/easyprpy/include/: py.h
NativeEasyPR/easyprpy/src/: py.cpp
NativeEasyPR/easyprtest/: easyprtest.vcxproj  easyprtest.vcxproj.filters  main.cpp
NativeEasyPR/include/: process.h
NativeEasyPR/src/: process.cpp
easyprgo/src/easyprgo/: README.md  easypr.go  easypr_linux.go  easypr_windows.go  easyprlinux.go  easyprwin.go
easyprgo/src/easyprgo/main/: main.go
easyprgo/src/include/: py.h
easyprjava/: README.md  pom.xml
easyprjava/src/main/java/org/easyprjava/jni/: EasyPR.java
easyprjava/src/main/java/org/smirkcat/loaddll/: JarDllJava.java
easyprjava/src/test/java/org/easyprjava/jni/: EasyPRTest.java
easyprjava/src/test/resources/model/: ann_chinese.xml
easyprjavaweb/: .gitignore  README.md  pom.xml
easyprjavaweb/src/main/java/org/smirkcat/easypr/Impl/: IImageProcessingImpl.java
easyprjavaweb/src/main/java/org/smirkcat/easypr/controller/: DemoController.java  ImageDemoController.java
easyprjavaweb/src/main/java/org/smirkcat/easypr/service/: IImageProcessing.java
easyprjavaweb/src/main/java/org/smirkcat/easypr/service/Impl/: IImageProcessingImpl.java
easyprjavaweb/src/main/java/org/smirkcat/easypr/util/: EasyPRInstance.java  ReturnMessage.java  ToImageByte.java
easyprjavaweb/src/main/resources/model/: province_mapping
easyprjavaweb/src/main/webapp/WEB-INF/: web.xml
easyprjavaweb/src/main/webapp/WEB-INF/spring/: spring-controller.xml  spring-mvc.xml  spring-service.xml
easyprjavaweb/src/main/webapp/jscss/css/: demo.css  global.css
easyprjavaweb/src/main/webapp/jscss/js/: ajaxfileupload.js  util.js
easyprjavaweb/src/main/webapp/jsp/: imagedemo.jsp
easyprjavaweb/src/main/webapp/jsp/global/: 404.jsp  500.jsp
easyprnodejs/: .gitignore  README.md  app.js  binding.gyp  find-opencv.js
easyprnodejs/include/: jsobject.h
easyprnodejs/node_mode/windows/: easyprnode.node
easyprnodejs/src/: js.cpp  jsobject.cpp
easyprpython/: RAEDME.md  README.md  easypr.py  easyprpy.py  py.py
easyprrust/: Cargo.toml  README.md
easyprrust/src/: main.rs
easyprscala/: README.md  pom.xml
easyprscala/src/main/scala/org/easyprjava/jni/: EasyPR.scala
easyprscala/src/main/scala/org/smirkcat/loaddll/: JarDllJava.java  JarDllScala.scala
easyprscala/src/test/resources/model/: ann.xml
easyprscala/src/test/scala/org/easyprjava/jni/: EasyPRTest.scala
